--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "toastify-react-native": "^7.2.3"
   },
   "private": true
 }
