feat: Update onboarding process and enhance user interface
- Refactor onboarding screens to include a new onboarding flow with multiple pages.
- Add onboarding version constant for version control.
- Implement Lottie animation for the welcome screen.
- Update Login and Register screens with improved text and placeholder styles.
- Change SafeAreaView to View in HomeScreen and MTControlScreen for layout adjustments.
- Update package dependencies for better compatibility and performance.
- Introduce new styles and components for a more cohesive design.

--- a/app.json
+++ b/app.json
@@ -10,20 +10,44 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#00FFFFFF"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.djsablab.TideTasks"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.djsablab.TideTasks"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "890331ad-0fcc-40e1-a075-c381d287f926"
+      }
+    },
+    "plugins": [
+      "expo-font",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 36,
+            "targetSdkVersion": 36,
+            "buildToolsVersion": "35.0.0",
+            "useLegacyPackaging": true
+          },
+          "ios": {
+            "deploymentTarget": "15.1"
+          }
+        }
+      ]
+    ]
   }
 }
