--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
+  },
+  "overrides": {
+    "react-native-calendars": {
+      "react-native-safe-area-context": "^5.6.2"
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/stack": "^7.6.8",
-    "babel-preset-expo": "^54.0.7",
-    "expo": "~54.0.25",
-    "expo-status-bar": "~3.0.8",
+    "babel-preset-expo": "^54.0.9",
+    "expo": "^54.0.30",
+    "expo-build-properties": "~1.0.10",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-status-bar": "3.0.9",
     "firebase": "^12.6.0",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
@@ -30,6 +39,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "0.5.1",
     "toastify-react-native": "^7.2.3"
   },
   "private": true
