feat: Update README with setup instructions and add Firebase configuration to app.json and eas.json Integrate eas secrets for better Firebase configurations

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.djsablab.TideTasks"
+      "bundleIdentifier": "com.djsablab.TideTasks",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
