--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,15 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+        "env": {
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "FIREBASE_APP_ID": "$FIREBASE_APP_ID"
+      }
     }
   },
   "submit": {
